<resources>
    <string name="app_name">shoe_store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_userName_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="required_field">required</string>
    <string name="invalid_email">invalid email</string>
    <string name="weak_pass">weak password</string>
    <string name="success_login">login successfully</string>
    <string name="welcome_msg">Welcome to My Shoe Store</string>
    <string name="company_name">Shoe Store</string>
    <string name="instruction_msg">Go To My Store Instruction</string>
    <string name="instruction">Instruction</string>
    <string name="instructions_msg">This is Our Instructions</string>
    <string name="go_to_Store">Go to Our Store</string>
    <string name="store">Shoe Store</string>
    <string name="add_shoe">Add new shoe</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
</resources>