<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/paddingLayout"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_storefront_24"
        app:layout_constraintBottom_toTopOf="@+id/company_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingLayout"
        android:text="@string/company_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/headerTextSize"
        app:layout_constraintBottom_toTopOf="@+id/instruction_msg_txt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/instruction_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_header_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/shoeList_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_msg"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/sub_header_text"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_msg_txt" />


    <Button
        android:id="@+id/instruction_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/paddingLayout"
        android:text="@string/instruction"
        android:textAllCaps="false"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="@dimen/sub_header_text"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>